<resources>
    <string name="app_name">Chat Me</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="create_new_account_btn">Create New Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
</resources>